--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -32,7 +32,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.56.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -67,4 +67,15 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
+  (1..5).each do |i|
+    # Defining VM properties
+    config.vm.define "server0#{i}.quiz.example.neustar" do |node|
+      node.vm.box = "server0#{i}.quiz.example.neustar"
+      node.vm.network "private_network", ip: "192.168.56.1#{i}"
+      # Specifying the provider as VirtualBox and naming the VM's
+      # config.vm.provider "virtualbox" do |node|
+      #   node.name = "server0#{i}.quiz.example.neustar"  
+      # end
+    end
+  end
 end
