--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -32,7 +32,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.56.10"
+  # config.vm.network "private_network", ip: "192.168.56.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -69,13 +69,18 @@ Vagrant.configure("2") do |config|
   # SHELL
   (1..5).each do |i|
     # Defining VM properties
-    config.vm.define "server0#{i}.quiz.example.neustar" do |node|
-      node.vm.box = "server0#{i}.quiz.example.neustar"
-      node.vm.network "private_network", ip: "192.168.56.1#{i}"
+    config.vm.define "server0#{i}.quiz.example.neustar"
+    config.vm.provision "ansible" do |ansible|
+      ansible.playbook = "playbook.yaml"
+    end
+
+    # config.vm.define "server0#{i}.quiz.example.neustar" do |node|
+    #   node.vm.box = "server0#{i}.quiz.example.neustar"
+    #   node.vm.network "private_network", ip: "192.168.86.3#{i}"
       # Specifying the provider as VirtualBox and naming the VM's
       # config.vm.provider "virtualbox" do |node|
       #   node.name = "server0#{i}.quiz.example.neustar"  
       # end
-    end
+    # end
   end
 end
