--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "hashicorp/bionic64"
+  config.ssh.insert_key = false
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -70,6 +71,7 @@ Vagrant.configure("2") do |config|
   (1..5).each do |i|
     # Defining VM properties
     config.vm.define "server0#{i}.quiz.example.neustar"
+    config.vm.network "private_network", type: "dhcp"
     config.vm.provision "ansible" do |ansible|
       ansible.playbook = "playbook.yaml"
     end
