--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "hashicorp/bionic64"
-  config.ssh.insert_key = false
+  # config.ssh.insert_key = false
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -71,18 +71,8 @@ Vagrant.configure("2") do |config|
   (1..5).each do |i|
     # Defining VM properties
     config.vm.define "server0#{i}.quiz.example.neustar"
-    config.vm.network "private_network", type: "dhcp"
     config.vm.provision "ansible" do |ansible|
       ansible.playbook = "playbook.yaml"
     end
-
-    # config.vm.define "server0#{i}.quiz.example.neustar" do |node|
-    #   node.vm.box = "server0#{i}.quiz.example.neustar"
-    #   node.vm.network "private_network", ip: "192.168.86.3#{i}"
-      # Specifying the provider as VirtualBox and naming the VM's
-      # config.vm.provider "virtualbox" do |node|
-      #   node.name = "server0#{i}.quiz.example.neustar"  
-      # end
-    # end
   end
 end
