--- a/vagrant/playbook.yaml
+++ b/vagrant/playbook.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Generate fake logs
+- name: Generate test logs
   hosts: all
   remote_user: vagrant
 
@@ -17,6 +17,10 @@
     - name: Generate random log file
       command:
         cmd: python3 /tmp/gen-log.py /tmp/madeup.log
+      # Don't regenerate new logs each time provisioning playbook is run.
+      # Run playbook 'regenerate-random-logs-playbook.yaml' to
+      # regenerate random logs.
         creates: /var/log/ultradns-quiz-madeup.log
+      # Runs as root, since /var/log access requires elevated permissions
       become: true
 
